k8s/base/namespace-sa.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: orders
